# cc-core

./: Cargo.toml  README.md
src/: drawer.rs  drawer_box.rs  job.rs  job_notes.rs  kbc.rs  lead_time.rs  lib.rs  manufacturer.rs  naive_date_serde.rs  native_date_serde.rs  paperwork_follow_up.rs  schedule.rs  schedule_note.rs  scheduling.rs  test.rs  valen.rs  valen_box.rs
src/drawers/: kbc.rs  mod.rs  valen_box.rs
src/schedule/: btree_naive_date_time_serde.rs  lead_time.rs  manufacturer.rs  mod.rs  naive_date_serde.rs  note.rs  notes.rs  request.rs  tentative.rs  tracker.rs
