[package]
name = "cc-tools-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "*" }
strum = { version = "*", features = ["derive"] }
strum_macros = { version = "*" }
open = { version = "*", optional = true }
serde = { version = "*", features = ["derive"] }
chrono = { version = "*" }
human_format = { version = "*" }
non-empty-string = { version = "*", features = ["serde"]}