[package]
name = "cc-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "*"
webbrowser = "*"
non-empty-string = "*"
human_format = "*"
strum_macros = "*"
derive_more = "*"
strum = { version = "*", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
